%% Modèle Conceptuel de Données (MCD) — CARIBOOKS
erDiagram
    LIVRE }o--|| ETAT_USURE : "a pour état"
    LIVRE ||--o{ STOCK : "stocké (quantité)"
    STOCK }o--|| SOURCE_STOCK : "provient de"
    UTILISATEUR ||--o{ COMMANDE : "passe"
    COMMANDE ||--o{ PAIEMENT : "réglée par (retries possibles)"
    COMMANDE ||--|{ LIGNE_COMMANDE : "contient"
    LIGNE_COMMANDE }o--|| LIVRE : "porte sur"
    UTILISATEUR ||--o{ SCAN_ISBN : "scanne"
    SCAN_ISBN }o--|| LIVRE : "concerne"
    LIGNE_COMMANDE ||--o{ STOCK_MOUVEMENT : "a déduit"
    STOCK ||--o{ STOCK_MOUVEMENT : "a été mouvementé"

    ETAT_USURE { string libelle }
    SOURCE_STOCK { string libelle string type_source }
    LIVRE { string sku string titre decimal prix_chf string isbn string auteur string editeur string langue }
    STOCK { int quantite_disponible int quantite_reservee }
    UTILISATEUR { string email string role string google_id }
    COMMANDE { string numero decimal montant_total_chf string statut }
    LIGNE_COMMANDE { int quantite decimal prix_unitaire_chf }
    PAIEMENT { string reference_externe decimal montant_chf string statut }
    SCAN_ISBN { string isbn_lu boolean valide }
    STOCK_MOUVEMENT { int quantite datetime date_mouvement }
